# coda-katas

./: .gitignore  PAIR-PROGRAMMING.md  README.md
01.coda-buzz/: README.md
01.coda-buzz/src/: test_codaBuzz.c
01.codaBuzz/: README.md
01.codaBuzz/src/: CMakeLists.txt  codaBuzz.c  codaBuzz.h  main.c  test_codaBuzz.c
02.pricing/: README.md
02.prime/: README.md
02.prime/src/: CMakeLists.txt  prime.c  prime.h  test.c
03.stringCalculator/src/: CMakeLists.txt  calculator.h
04.manhattan-distance/: README.md
04.manhattan-distance/src/: calculator.c
04.unit-tests/: README.md
05.bowling-kata/: README.md
05.manhattan-distance/src/: test.c
05.stringCalculator/: README.md
06.mars-rover/: README.md
07.mars-rover/: README.md
09.algos-star-wars/: README.md  package-lock.json  package.json
09.algos-star-wars/episode00/: README.md  midichlorians.spec.ts  midichlorians.ts
09.algos-star-wars/episode01/: README.md  skywalkerPower.spec.ts  skywalkerPower.ts
09.algos-star-wars/episode02/: README.md  findPlanet.spec.ts  findPlanet.ts
09.algos-star-wars/episode03/: README.md  droidStack.spec.ts  droidStack.ts
09.algos-star-wars/episode04/: README.md  jediNames.spec.ts  jediNames.ts
09.algos-star-wars/episode05/: README.md  planets.spec.ts  planets.ts
09.algos-star-wars/episode06/: README.md  cloneSequence.spec.ts  cloneSequence.ts
09.algos-star-wars/episode07/: README.md  sithCode.ts
09.algos-star-wars/episode08/: README.md  droidTransmission.spec.ts  droidTransmission.ts
09.algos-star-wars/episode09/: README.md  hqs  (+2 more)
10.wtf-http/: README.md
(+71 files in other folders)
